fixed miniPost img on mobile

--- a/src/componentes/Posts/Post.css
+++ b/src/componentes/Posts/Post.css
@@ -33,8 +33,10 @@
     padding-right: 10%;    
 }
 
-.selected-post-inner img{
-    height: 25rem !important;
+@media (min-width: 768px){
+    .selected-post-inner img{
+        height: 25rem !important;
+    }
 }
 
 .selected-post-outer{    
